What's a post without me editing it two to three times.

--- a/content/post/02-07-2025.md
+++ b/content/post/02-07-2025.md
@@ -5,7 +5,7 @@ date: 2025-01-16
 tags:
   - Music
 title: Week 5 - Song Of The Week
-image: https://www.okayafrica.com/media-library/image.jpg?id=10401860&width=980
+image: https://www.billboard.com/wp-content/uploads/2023/07/Odetari-cr-Heffy-press-2023-billboard-1548.jpg
 toc: false
 categories:
   - Song Of The Week
@@ -21,7 +21,7 @@ Been listening to Odetari for a hot minute and wanted to make a post with some o
 {{< youtube sYpSpHq9ziM>}}
 
 
-###        2. RUN (ft. #  Lay Bankz) - ODETARI & VALORANT
+###        2. RUN (ft. Lay Bankz) - ODETARI & VALORANT
 
 {{< youtube 3h0ilgEHWOA >}}
 
