--- a/content/post/02-07-2025.md
+++ b/content/post/02-07-2025.md
@@ -11,7 +11,7 @@ categories:
   - Song Of The Week
 ---
 
-Been listening to Odetari for a hot minute and wanted to make a post with some of my most played songs. In order from Most View to Least Viewed. **Also Explicit Language**
+Been listening to Odetari for a hot minute and wanted to make a post with some of my most played songs in order from Most View to Least Viewed. **Also Explicit Language**
 
 ---
 
