--- a/content/post/02-14-2025.md
+++ b/content/post/02-14-2025.md
@@ -27,7 +27,7 @@ Also I'm pushing my HUGO post till Monday.
 {{< youtube gQtKJbptcns >}}
 
 
-###        3. All CAPS -  Madvillain
+###        3. All CAPS -  Madvillain [MF DOOM & Madlibs]
 
 {{< youtube gSJeHDlhYls >}}
 
