--- a/content/post/02-27-2025.md
+++ b/content/post/02-27-2025.md
@@ -8,7 +8,7 @@ tags:
   - YouTube
   - Updates
 title: Welcome To My Channel
-image: https://noise.thehardtimes.net/wp-content/uploads/2021/01/doomheader.jpg
+image: 
 toc: false
 categories:
   - Just Talking
