--- a/content/post/02-27-2025.md
+++ b/content/post/02-27-2025.md
@@ -19,5 +19,5 @@ categories:
 https://www.youtube.com/@RaysPersonalCorner
 
 ---
-###        Stay Tune Next Week For More Updates
+#        Stay Tune Next Week For More Updates
 
