It won't be me without a spelling mistake.

--- a/content/post/2025/03-07-2025.md
+++ b/content/post/2025/03-07-2025.md
@@ -10,7 +10,7 @@ toc: false
 categories:
   - Song Of The Week
 ---
-Sorry for the late post work kinda killed me. But....
+Sorry for the late post, work kinda killed me. But....
 
 This is Soia. She was an artist I first listen to when I was a child. I've since forgotten about her and she would have stayed forgotten if it wasn't thanks to a little game called Bomb Rush Cyberfunk. This game feature one song, that being the same song I listened to all these years ago. The track is placed at #1 and I decided to choose a few songs to accompany it.
 
