--- a/content/post/2025/03-17-2025.md
+++ b/content/post/2025/03-17-2025.md
@@ -2,7 +2,7 @@
 author: Raymon S.
 date: 2025-03-17
 title: LIFE / PROJECT UPDATE 3 | Photo Gallery
-toc: true
+toc: false
 tags:
   - LIFE
   - Updates
