--- a/content/post/2025/03-17-2025.md
+++ b/content/post/2025/03-17-2025.md
@@ -3,6 +3,7 @@ author: Raymon S.
 date: 2025-03-17
 title: LIFE / PROJECT UPDATE 3 | Photo Gallery
 toc: false
+image: https://lh3.googleusercontent.com/pw/AP1GczMkm0o8P083yBDNZSzRhmFOhBkI1TnS2c6x4fFACnIyk2fiNYylcJNECk2O7GWBSmFn03GXX-YLBDcyUYBXmS1a6S7dKCuqEbNVX4HC0aYRaKSOsAGuafWpcCu341JQwTmxwKTL_bKntBfOPw2-NY4yag=w2671-h1780-s-no-gm?authuser=0
 tags:
   - LIFE
   - Updates
