--- a/content/post/2025/03-17-2025.md
+++ b/content/post/2025/03-17-2025.md
@@ -19,7 +19,7 @@ tags:
 
 ##  Website Update
 
-Let's get this out of the way, I decided to change my upload schedule yet again. I'm going to try and upload at least two post per week instead of three posts. I'm making this change because I've been running into problems with my upload schedule mainly being that publishing three post in a week is alot of work that require balancing my job & my personal life. Another factor is my writing process, when it come writing posts the time I actual spend on the post varies drastically on how I feel and on top of that I will write several drafts post and will scrap them because I feel like a topic is not interesting enough to make a post or I simply wouldn't finish it in time. Because I scrap so many posts this leads me to cobbling together something to post. This leads to me just posting a bunch of "Song Of The Weeks" & very little actual informative post. So I'm going to try lessing my post requirement & really try to salvage or post some of my scrapped post.
+Let's get this out of the way, I decided to change my upload schedule yet again. I'm going to try and upload at least two post per week instead of three posts. I'm making this change because I've been running into problems with my upload schedule mainly being that publishing three post in a week is alot of work that require balancing my job & my personal life. Another factor is my writing process, when it come to writing posts the time I actual spend on the post varies drastically on how I feel. On top of that I would write several drafts post and will scrap them because I feel like a topic is not interesting enough to post or simply wouldn't finish it in time. Because I scrap so many posts this leads me to cobbling together something to post. This leads to me just posting a bunch of "Song Of The Weeks" & very little actual informative post. So I'm going to try lessing my post requirement & really try to salvage or post some of my scrapped post.
 
 **Current Schedule**
 | 3/17/25                                  | 3/21/25        |
