--- a/content/post/2025/03-21-2025.md
+++ b/content/post/2025/03-21-2025.md
@@ -21,7 +21,7 @@ categories:
 {{< youtube DxaM8RHZzA >}}
 
 ###       2. Tell Em [ft.$NOT] - Cochise
-{{< youtube MbJ72KO5khs>}}
+{{< youtube eH_TOrddnZ0>}}
 
 
 ###        3. Pocket Rocket - Cochise
