--- a/content/post/2025/03-21-2025.md
+++ b/content/post/2025/03-21-2025.md
@@ -17,8 +17,7 @@ categories:
 
 
 ###        1. Hatchback - Cochise
-
-{{< youtube DxaM8RHZzA >}}
+<iframe width="1148" height="654" src="https://www.youtube.com/embed/-DxaM8RHZzA" title="Cochise - Hatchback (Official Video)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 ###       2. Tell Em [ft.$NOT] - Cochise
 {{< youtube eH_TOrddnZ0>}}
