--- a/content/post/2025/03-03-2025.md
+++ b/content/post/2025/03-03-2025.md
@@ -48,12 +48,41 @@ As you can see I have two post planned for Wednesday. This isn't a 100% guarante
 
 <script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>
 <div class="pa-carousel-widget" style="width:100%; height:480px; display:none;"
-  data-link="https://photos.app.goo.gl/iEgbuBxSDBg8zV5o8"
-  data-title="Hestia & Nicks"
-  data-description="3 new items · Album by Raymon S.">
-  <object data="https://lh3.googleusercontent.com/pw/AP1GczMwt87QH9yNVrUfKlPEEvH8CrlFhwcIejmTAywggYDCEp-G31x_C3zWL3A0kAy1b74uggQ7KeQXfUL5oFZseWHu_2oiC2fBOAjExDdo-09bG76d4Mpn=w1920-h1080"></object>
-  <object data="https://lh3.googleusercontent.com/pw/AP1GczNi1uVk-u-veQ_Q7ddXJy3Y6UVJrJNTXiPGL8Sg8LgKOKzq5oD7sXopEugLgGrXgg0nXiL3a9v8kLzdMwbjsDE3DR3qs2zHUpPsERcXGyE1Z7RvDdgK=w1920-h1080"></object>
-  <object data="https://lh3.googleusercontent.com/pw/AP1GczPFHFWV-lLq13kRSUVNoCuBgZ5pWbi6Hd9VW3SnYYgDH40fnY9GBT9xxWfqgCLJIEPzEsHDLNMom7bMBLkItoT3tR6Scf5v8vdcm5qeW1P0aeRNhbCK=w1920-h1080"></object>
+  data-link="https://photos.app.goo.gl/kdJ31bZ3yAYVHYMy7"
+  data-title="The Cats"
+  data-description="41 new items added to shared album">
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczOlb5QIKefUeNEaHNHfnCNeM6xw0c8sO-xIh-Eepk_398VUMndva9ADnaOAPFVlV_v4wxIaLW78nUSwAkrBZ7Wh4jxMaWuNKuL7ZLRLEK5ZxFCaUs21=w1920-h1080"></object>
+
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczMauepKB0p7_4pIdnWblbuF58uC9ZTqg1FQ9pf7sDfba-dz2s_ZaT4k0i0gNJiqgE-N28rn5s45hY1uVzouJi7yOnEQW7db1G9DEYij-aDaja6qRk-n=w1920-h1080"></object>
+
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczNfymF-7dg2YFarq7YzslrRGiJlkBqTxZDufMpR2e4QFj3vuYTvHTiHD7yqt1xw8nfMHr0UqLtWNbp1RO-jw3mjRFVeI32E_pgItUfaNiJTgetv-91J=w1920-h1080"></object>
+
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczO_8oHCUcdmn8eZGJOIddVjtaH6gE5ppiBtdFoCHReMwP8V_JwyveD6bSqrclaExZTSOEstgkxoRcHWs5z1U3_ZN90F-5TVchT1u-W1OiXbE6iMO5Zi=w1920-h1080"></object>
+
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczPBrtFdxhPPsW9PBJP-RpWGA-oB6fwuUUJJ91lNGCz1KC5J5AevBTvkJfTluqeLSY84jhlRKGPfGPzdm_SJJXswh90jR7PIaF4mldt_f_5QJR6QDEiX=w1920-h1080"></object>
+
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczOKt_l_bzNScqp3jpTkJt0tu3A_g6rkKvkGhNvLrnTkfo1xzpleC4T8oe5_0tOMwopdfIzmuGUC5oi4M9k4mZMblr0Qk1H_9xRUiZN9wNVvgHv8o8_y=w1920-h1080"></object>
+
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczP2ZIqlqmIIQVUnbjQkTChuFhs7Tt-4iiGpp5HYyvFTyR20OC4CcyGIoKaXIgEn2G-86UQGqMR3sQojbhPYqUFw7ey7dz4BBkv9gDfG-fxNKpuFjNuz=w1920-h1080"></object>
+
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczPLehuSnSXDICEjZqYuBbdzwsL-mHgcsdlu6S0AtH6RuXPOvJU-Jvx-YEIPaDU0tt3PPkOPhEzFFVAGK5fE0z2ZocqLy3fxo0rUBlR5aAuXSXxa1mZ3=w1920-h1080"></object>
+
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczPmdQziQZIk5LKwg00jOXOa0WxHYPzvnhoqH3f7eykaWxQKl3rrobJ2QsLREcmBRCQrDupJwkUsy2zyMYaU9vKxcINwONOkenMJI3QswBlc9r1hUmQO=w1920-h1080"></object>
+
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczPva2VUe-aHZN5g_2cSYBljgTWob2ERXua_FlqAlCKv3KI-uQ39eIlvNA8W8tLiShUeoprNVMG_1akUoD5wW-9H8s7ydtrdpnXlg7Oyi52HkTAHTSsc=w1920-h1080"></object>
+
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczP9nOtDqaJhMc98SGoUg8JNO7H2SLBL7zt6oRrOFkvu4XsjvE6sPMp5_ni6Umh3GFiUeq8dteJNZD2bPYZVl0fiaW-wUCbIgg_CknuKJGcH9shCiViB=w1920-h1080"></object>
+
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczOhRRJqf2SpkNcXHnUEpkX00De5dhDSLW7FKBzvtTDsPEQNetDLRpZpOtOvFCcvCFu2oKYBef03xYe8hPPUbvqcc4RhY56pA1xuIjwc7-UH-YolzEEl=w1920-h1080"></object>
+
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczNU3ziKCIvNc_1ayYZocxb-An5mJKz9z829-jW7UVKMWAIGlFSRq3b5vibYtv8onxPRrLcxR00mIVD8YUkwtX4naEAgO3ry3Sgd-E-XvFkvhuiJXjHz=w1920-h1080"></object>
+
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczN7Ws5eT-CLJPKNSuk7ALMecY54PsjZlbE4noQets_mornX8H9f9lo3CVQ7DDsGmMkOSuXkia3M2Gni0aOpLaMShi5tzFeCDZCOOmyl6N6YtLsuGjfc=w1920-h1080"></object>
+
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczMJ0dvoAJKSaAN1jvsVvEFnBGQsVsdUuzQb1sWFGE7iVGpkNpaoeiPr3zCRHQZGf8G91Mw9aGuIQds6VnfWQA8Z-7WvS1RcascTePR9X7ge168WsK6y=w1920-h1080"></object>
+
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczMuKqCt0018xZpUKuuMj4h4rHaxzynGVs9jkqKtLon5ac-LuQHoobmZv4fvtY5TJq8W_R1vsB0_6ryyEQCJmS-xWGdyOXcelP-oVokFAHQXN4n7GS1S=w1920-h1080"></object>
+
 </div>
 
 &nbsp; 
