--- a/content/post/2025/07-05-2025.md
+++ b/content/post/2025/07-05-2025.md
@@ -59,5 +59,4 @@ With that being said you may think that i went with Ubuntu. But instead I went w
 
 ## Conclusion?
 
-For now this is all I have to say. I originally had a way longer post planned but I wanted to get something on my website instead of spending weeks on one post that I keep pushing back. But I will be updating you with other post including posts on how my Linux experience is and even how to tutorials on how to use Linux, customize it, install apps & I will be  
-
+For now this is all I have to say. I originally had a way longer post planned but I wanted to get something on my website instead of spending weeks on one post that I keep pushing back. But I will be updating you with other post including posts on how my Linux experience is and even how to tutorials on how to use Linux, customize it, install apps & more.
